--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Sikika</string>
+    <string name="ls">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam beatae deleniti dignissimos eaque, est facere ipsam magni nulla quas quidem quis ratione sed sunt voluptate! Distinctio facilis incidunt itaque!</string>
 </resources>
