finished intro screen
moving to the homepage design an functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Sikika</string>
-    <string name="ls">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam beatae deleniti dignissimos eaque, est facere ipsam magni nulla quas quidem quis ratione sed sunt voluptate! Distinctio facilis incidunt itaque!</string>
+    <string name="app_name">Walk</string>
+    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab, asperiores dignissimos eius eligendi eos error esse et eveniet magni modi quaerat, quidem quis quo soluta, suscipit tenetur voluptate voluptates?</string>
 </resources>
