--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,14 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_articles">Articles</string>
+    <string name="menu_films">Films</string>
+    <string name="menu_drama">Drama</string>
+    <string name="menu_stream">Stream Live</string>
+    <string name="menu_partners">Partners</string>
+    <string name="menu_creative_arts">Creative Arts</string>
+    <string name="menu_features">Features</string>
+    <string name="menu_about_us">About Us</string>
 
     <string name="articles">articles</string>
     <string name="creative_arts">creative arts</string>
@@ -26,4 +28,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="settings">Settings</string>
+    <string name="title_activity_article_reader">ArticleReader</string>
 </resources>
